--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.buttons-container{
+  
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: end;
+  margin: auto;
+  margin-top: 15px;
+  }
+
+.cancelButton{  
+  padding: 15px 50px;
+  color: rgb(202 94 88);
+  font-weight: 600;
+  border: solid 2px rgb(231 196 195);
+  border-radius: 8px;
+  background-color: transparent;
+  margin-left: 100px;   
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.submitButton{
+  margin-left: 200px;
+  padding: 15px 50px;
+  color: rgb(246 248 245);
+  font-weight: 600;
+ border-radius: 8px;
+ border: 0;
+  background-color: rgb(69 123 59);
 }
